--- a/app/src/main/res/layout/activity_all_tasty_noms.xml
+++ b/app/src/main/res/layout/activity_all_tasty_noms.xml
@@ -4,36 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".AllTastyNoms">
 
     <TextView
-        android:id="@+id/homeText"
+        android:id="@+id/allTastyNomsPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/find_tasty_gf_noms"
+        android:text="@string/all_tasty_noms"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/goToAllNoms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="@string/go_to_all_tasty_noms"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeText" />
-
-    <Button
-        android:id="@+id/goToAddNewNomLocation"
+        android:id="@+id/goToAddNewLocationFromAllTastyNoms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_new_gf_tasty_nom_place"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goToAllNoms" />
+        app:layout_constraintTop_toBottomOf="@+id/allTastyNomsPageTitle" />
+
+    <Button
+        android:id="@+id/goToMainActivityFromAllTastyNoms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goToAddNewLocationFromAllTastyNoms" />
 </androidx.constraintlayout.widget.ConstraintLayout>
