--- a/app/src/main/res/layout/activity_all_tasty_noms.xml
+++ b/app/src/main/res/layout/activity_all_tasty_noms.xml
@@ -19,8 +19,8 @@
         android:id="@+id/goToAddNewLocationFromAllTastyNoms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="@string/add_new_gf_tasty_nom_place"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/allTastyNomsPageTitle" />
 
@@ -28,7 +28,20 @@
         android:id="@+id/goToMainActivityFromAllTastyNoms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="@string/home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/goToAddNewLocationFromAllTastyNoms"
+        app:layout_constraintTop_toBottomOf="@+id/allTastyNomsPageTitle" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="409dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goToAddNewLocationFromAllTastyNoms" />
