--- a/app/src/main/res/layout/activity_all_tasty_noms.xml
+++ b/app/src/main/res/layout/activity_all_tasty_noms.xml
@@ -34,15 +34,15 @@
         app:layout_constraintStart_toEndOf="@+id/goToAddNewLocationFromAllTastyNoms"
         app:layout_constraintTop_toBottomOf="@+id/allTastyNomsPageTitle" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.sharinastubbs.gftastynoms.GFNomPlacesFragment"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goToAddNewLocationFromAllTastyNoms" />
+        app:layout_constraintTop_toBottomOf="@+id/goToAddNewLocationFromAllTastyNoms"
+        tools:layout="@layout/fragment_gfnomplaces_list" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
